<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/setting_base_settings">
        <ListPreference
            app:defaultValue="@string/setting_language_default_value"
            app:entries="@array/setting_language_array"
            app:entryValues="@array/setting_language_values"
            app:icon="@drawable/ic_setting_language"
            app:key="@string/setting_language_key"
            app:title="@string/setting_language"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="@string/setting_launch_page_default_value"
            app:entries="@array/setting_launch_page_array"
            app:entryValues="@array/setting_launch_page_values"
            app:icon="@drawable/ic_launch"
            app:key="@string/setting_launch_page_key"
            app:title="@string/setting_launch_page"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="@string/setting_ui_mode_default_value"
            app:entries="@array/setting_ui_mode_array"
            app:entryValues="@array/setting_ui_mode_values"
            app:icon="@drawable/ic_setting_theme_mode"
            app:key="@string/setting_ui_mode_key"
            app:title="@string/setting_ui_mode"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/setting_about">
        <Preference
            app:icon="@drawable/ic_setting_about"
            app:key="@string/setting_about_oxygen_toolbox_key"
            app:title="@string/setting_about_oxygen_toolbox" />
    </PreferenceCategory>
</PreferenceScreen>