<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/ic_menu_theme"
            android:title="@string/menu_theme" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/menu_setting" />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/nav_group_exit">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/menu_exit" />
    </group>
</menu>